// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar should render properly with default props and match snapshot 1`] = `
<DocumentFragment>
  <mock-styled.span
    role="presentation"
  >
    Default Avatar
  </mock-styled.span>
</DocumentFragment>
`;

exports[`Avatar should render properly with specified props and match snapshot 1`] = `
<DocumentFragment>
  <mock-styled.span
    data-intent="primary"
    data-shape="square"
    data-size="small"
    role="presentation"
  >
    Circle Avatar
  </mock-styled.span>
</DocumentFragment>
`;
